# code-search-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backup-db.sh  docker-compose.yml  index-then-summarize.sh  pyproject.toml  requirements.txt  run-index.py  server.py
.github/workflows/: docker-publish.yml
mcp/: README.md  package-lock.json  package.json
src/code_search_api/: __init__.py  cli.py  indexer.py  server.py
