[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "code-search-api"
version = "0.1.0"
description = "Local semantic code search with Ollama embeddings, SQLite, and hybrid search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Solomon Neas" }]
keywords = ["code-search", "semantic-search", "ollama", "embeddings", "sqlite", "fastapi", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "numpy>=1.26",
  "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/solomonneas/code-search-api"
Repository = "https://github.com/solomonneas/code-search-api"
Issues = "https://github.com/solomonneas/code-search-api/issues"

[project.scripts]
code-search-api = "code_search_api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
